Fixing Navbar overflow scorlling below jumbothrone

--- a/assets/themes/zeppelin/css/style.css
+++ b/assets/themes/zeppelin/css/style.css
@@ -308,6 +308,9 @@ body {
     font-size: 60%;
     color: #FFF; }
 
+.navbar-collapse.collapse {
+    max-height: 50px;}
+
 /* Custom, iPhone Retina */ 
 @media only screen and (max-width : 480px) {
   .jumbotron h1 {
